2025-05-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.4-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha05: Gut Punch';git push
	git tag -a 5.3.4-alpha05 -m '';git push --tags

	* NCO 5.3.4-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha04: Yellowjackets';git push
	git tag -a 5.3.4-alpha04 -m 'ncks: S1D add lut_out=789 option, frc_column add urb_all';git push --tags

	* Complete and test new S1D lut_out=789 option for all urban types

2025-05-20  Charlie Zender  <zender@uci.edu>

	* Create new S1D lut_out=789 option for all urban types (preliminary feature works)

	* Tidy nco.texi ncap2 and vpointer sections

2025-05-13  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha03: Complete Unknown';git push
	git tag -a 5.3.4-alpha03 -m 'ncclimo: fix hfc wrn/err msg; nfr tpd dpf from tm_var';git push --tags

	* Tidy nco_cln_utl.c

2025-05-09  Charlie Zender  <zender@uci.edu>

	* ncclimo infer tpd and dpf when time bounds not present

	* ncclimo allow hfc and hfs input files that contain no time bounds variables

2025-05-02  Charlie Zender  <zender@uci.edu>

	* ncclimo: ERROR when monthly climo mode receives file list not divisible by 12

	* ncclimo: Print $tm_var not $time in ERROR message

2025-04-29  Charlie Zender  <zender@uci.edu>

	* Add in_mlt_rec[12].cdl files to test concatenating station timeseries

2025-04-19  Charlie Zender  <zender@uci.edu>

	* Update build on Imua with Fedora 42 to use Anaconda

	* NCO 5.3.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha02: Hypr Paddle';git push
	git tag -a 5.3.4-alpha02 -m 'ncatted, ncrename: apn NC_STRING hst att pls rgr tst; ncks: map chk trbilin fix, sng att prn ln brk; ncremap: nfr XY crd';git push --tags

2025-04-18  Charlie Zender  <zender@uci.edu>

	* ncrcat fix regression introduced by using in_id not grp_id in	monotonicity bounds checks
